crates/ffi/include/pure_study.h

// The loaded, immutable study core: corpus + Strong's dictionary + the search
// and occurrence indices every lookup rides on. Opaque to C; construct with
// [`pure_engine_open`] / [`pure_engine_open_from_bytes`], release with
// [`pure_engine_free`].
typedef struct PureEngine PureEngine;
// One thread's detail as blocks (out-of-range index → the threads list). Never
// null on a live engine.
//
// # Safety
// `engine` is a live engine (or null → null).
char *pure_engine_thread_blocks_json(const struct PureEngine *engine, uint32_t index);
// The tags list as blocks. Never null on a live engine.
//
// # Safety
// `engine` is a live engine (or null → null).
char *pure_engine_tags_blocks_json(const struct PureEngine *engine);
// One tag's detail as blocks (out-of-range index → the tags list). Never null
// on a live engine.
//
// # Safety
// `engine` is a live engine (or null → null).
char *pure_engine_tag_blocks_json(const struct PureEngine *engine, uint32_t index);
// The weaves list as blocks. Never null on a live engine.
//
// # Safety
// `engine` is a live engine (or null → null).
char *pure_engine_weaves_blocks_json(const struct PureEngine *engine);
// The suggested-weave review queue as blocks. Never null on a live engine.
//
// # Safety
// `engine` is a live engine (or null → null).
char *pure_engine_suggested_blocks_json(const struct PureEngine *engine);
// A weave compare card as blocks (out-of-range index → empty). `full` adds the
// edit-notes action. Never null on a live engine.
//
// # Safety
// `engine` is a live engine (or null → null).
char *pure_engine_compare_blocks_json(const struct PureEngine *engine, uint32_t index, bool full);
// Search results as blocks (goto link or ranked hits with snippets). Null when
// the query is blank or the engine is null.
//
// # Safety
// `engine` is a live engine; `query` is null or valid NUL-terminated UTF-8.
char *pure_engine_search_blocks_json(const struct PureEngine *engine, const char *query);
// Author a weave link carrying word spans — the Full-study "pin a word in
// each pane, widen, ＋ link" flow. Span bounds are token indices; pass a
// negative bound for a span-less side. Null on success, else an owned error.
//
// # Safety
// `engine` is a live engine; string params are null or valid NUL-terminated
// UTF-8 for the call.
char *pure_engine_weave_add_link_spans(struct PureEngine *engine,
                                       const char *name,
                                       const char *a_ref,
                                       const char *b_ref,
                                       int32_t a_lo,
                                       int32_t a_hi,
                                       int32_t b_lo,
                                       int32_t b_hi,
                                       const char *added);
// Parse a panel link URI into the typed verb the shell dispatches on
// (`{verb, …}`; see `pure_core::panel::parse_link`) — the one verb vocabulary,
// so a non-Rust shell routes clicks through the core instead of re-splitting
// the URI string and risking drift from what the panel emits. Engine-
// independent. Null for an unknown verb or malformed payload (a shell then
// ignores the click).
//
// # Safety
// `uri` is null or valid NUL-terminated UTF-8 for the call.
char *pure_route_link_json(const char *uri);
// Load the cross-platform shell config (`%APPDATA%\pure-study\config.json` on
// Windows) as JSON: `{studyMode, bodySize, openPanes, activePane, firstRun}`.
// `firstRun` is true only when no config file existed. Never null.
char *pure_config_load_json(void);
// Save the shell config from the same JSON shape (unknown fields ignored,
// `firstRun` ignored). Null on success, else an owned error message.
//
// # Safety
// `json` is null or valid NUL-terminated UTF-8 for the call.
char *pure_config_save_json(const char *json);
// Clipboard text for a verse (or its chapter, for the `chapter*` kinds) in one
// of the shapes `pure_core::export::CopyKind` names (`verse` / `verseRef` /
// `verseMarkdown` / `chapter` / `chapterMarkdown`). Plain text, not JSON; null
// on a bad ref, an unknown kind, or a verse the corpus lacks. Caller-freed.
//
// # Safety
// `engine` is a live engine; the string args are null or valid NUL-terminated
// UTF-8 for the call.
char *pure_engine_copy_text(const struct PureEngine *engine, const char *ref_key, const char *kind);
// The reader's personal note on a verse as JSON (`{verse,display,text,created,
// updated}`), or null when the verse has no note (or the engine has no home).
//
// # Safety
// `engine` is a live engine; `ref_key` is null or valid NUL-terminated UTF-8.
char *pure_engine_user_note_json(const struct PureEngine *engine, const char *ref_key);
// All the reader's personal notes as JSON (`{notes:[…]}`), in canonical reading
// order — for the gutter marks and a "your notes" browser. Never null on a live
// engine (no notes → empty list).
//
// # Safety
// `engine` is a live engine (or null → null).
char *pure_engine_user_notes_json(const struct PureEngine *engine);
// Set (or clear, with an empty `text`) the reader's personal note on a verse,
// atomically, then reload. `stamp` is a caller-supplied UTC timestamp. Null on
// success, else an owned error string.
//
// # Safety
// `engine` is a live engine; the string args are null or valid NUL-terminated
// UTF-8 for the call.
char *pure_engine_user_note_set(struct PureEngine *engine,
                                const char *ref_key,
                                const char *text,
                                const char *stamp);
// Set (or clear, with a null `color`) the swatch colour of the tag named
// `name`, then reload. Drives highlighting (a colour-bearing tag washes its
// verses). Null on success, else an owned error.
//
// # Safety
// `engine` is a live engine; the string args are null or valid NUL-terminated
// UTF-8 for the call.
char *pure_engine_tag_set_color(struct PureEngine *engine, const char *name, const char *color);
// Add a word-precise highlight range to the tag named `name` (created on first
// use, taking `color` as its tone). The range runs from `start_ref`+`start_tok`
// to `end_ref`+`end_tok` (inclusive token indices under `kjv1769-tok2`);
// endpoints are ordered canonically here, so a backwards drag is fine. `color`
// may be null (the range then inherits the tag's colour). `added` is a
// caller-supplied UTC timestamp. Null on success, else an owned error.
//
// # Safety
// `engine` is valid; the string args are null or valid NUL-terminated UTF-8.
char *pure_engine_highlight_add(struct PureEngine *engine,
                                const char *name,
                                const char *color,
                                const char *start_ref,
                                uint32_t start_tok,
                                const char *end_ref,
                                uint32_t end_tok,
                                const char *added);
// Remove the highlight range with these endpoints from the tag named `name`.
// Endpoints are ordered canonically to match how they were stored. A missing
// range is a no-op; a missing tag is an error. Null on success, else an error.
//
// # Safety
// `engine` is valid; the string args are null or valid NUL-terminated UTF-8.
char *pure_engine_highlight_remove(struct PureEngine *engine,
                                   const char *name,
                                   const char *start_ref,
                                   uint32_t start_tok,
                                   const char *end_ref,
                                   uint32_t end_tok);
// The highlight washes for a chapter as JSON (`{book,chapter,verses:[{verse,
// color}]}`): each verse that belongs to a colour-bearing tag, with the tone
// the shell washes behind it. Never null on a live engine (none → empty list).
//
// # Safety
// `engine` is a live engine; `book` is null or valid NUL-terminated UTF-8.
char *pure_engine_chapter_highlights_json(const struct PureEngine *engine,
                                          const char *book,
                                          uint32_t chapter);