crates/ffi/bindings/csharp/PureStudyNative.g.cs


        /// <summary>
        ///  One thread's detail as blocks (out-of-range index → the threads list). Never
        ///  null on a live engine.
        ///
        ///  # Safety
        ///  `engine` is a live engine (or null → null).
        /// </summary>
        [DllImport(__DllName, EntryPoint = "pure_engine_thread_blocks_json", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern byte* pure_engine_thread_blocks_json(PureEngine* engine, uint index);

        /// <summary>
        ///  The tags list as blocks. Never null on a live engine.
        ///
        ///  # Safety
        ///  `engine` is a live engine (or null → null).
        /// </summary>
        [DllImport(__DllName, EntryPoint = "pure_engine_tags_blocks_json", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern byte* pure_engine_tags_blocks_json(PureEngine* engine);

        /// <summary>
        ///  One tag's detail as blocks (out-of-range index → the tags list). Never null
        ///  on a live engine.
        ///
        ///  # Safety
        ///  `engine` is a live engine (or null → null).
        /// </summary>
        [DllImport(__DllName, EntryPoint = "pure_engine_tag_blocks_json", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern byte* pure_engine_tag_blocks_json(PureEngine* engine, uint index);

        /// <summary>
        ///  The weaves list as blocks. Never null on a live engine.
        ///
        ///  # Safety
        ///  `engine` is a live engine (or null → null).
        /// </summary>
        [DllImport(__DllName, EntryPoint = "pure_engine_weaves_blocks_json", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern byte* pure_engine_weaves_blocks_json(PureEngine* engine);

        /// <summary>
        ///  The suggested-weave review queue as blocks. Never null on a live engine.
        ///
        ///  # Safety
        ///  `engine` is a live engine (or null → null).
        /// </summary>
        [DllImport(__DllName, EntryPoint = "pure_engine_suggested_blocks_json", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern byte* pure_engine_suggested_blocks_json(PureEngine* engine);

        /// <summary>
        ///  A weave compare card as blocks (out-of-range index → empty). `full` adds the
        ///  edit-notes action. Never null on a live engine.
        ///
        ///  # Safety
        ///  `engine` is a live engine (or null → null).
        /// </summary>
        [DllImport(__DllName, EntryPoint = "pure_engine_compare_blocks_json", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern byte* pure_engine_compare_blocks_json(PureEngine* engine, uint index, [MarshalAs(UnmanagedType.U1)] bool full);

        /// <summary>
        ///  Search results as blocks (goto link or ranked hits with snippets). Null when
        ///  the query is blank or the engine is null.
        ///
        ///  # Safety
        ///  `engine` is a live engine; `query` is null or valid NUL-terminated UTF-8.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "pure_engine_search_blocks_json", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern byte* pure_engine_search_blocks_json(PureEngine* engine, byte* query);

        /// <summary>
        ///  Author a weave link carrying word spans — the Full-study "pin a word in
        ///  each pane, widen, ＋ link" flow. Span bounds are token indices; pass a
        ///  negative bound for a span-less side. Null on success, else an owned error.
        ///
        ///  # Safety
        ///  `engine` is a live engine; string params are null or valid NUL-terminated
        ///  UTF-8 for the call.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "pure_engine_weave_add_link_spans", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern byte* pure_engine_weave_add_link_spans(PureEngine* engine, byte* name, byte* a_ref, byte* b_ref, int a_lo, int a_hi, int b_lo, int b_hi, byte* added);

        /// <summary>
        ///  Parse a panel link URI into the typed verb the shell dispatches on
        ///  (`{verb, …}`; see `pure_core::panel::parse_link`) — the one verb vocabulary,
        ///  so a non-Rust shell routes clicks through the core instead of re-splitting
        ///  the URI string and risking drift from what the panel emits. Engine-
        ///  independent. Null for an unknown verb or malformed payload (a shell then
        ///  ignores the click).
        ///
        ///  # Safety
        ///  `uri` is null or valid NUL-terminated UTF-8 for the call.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "pure_route_link_json", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern byte* pure_route_link_json(byte* uri);

        /// <summary>
        ///  Load the cross-platform shell config (`%APPDATA%\pure-study\config.json` on
        ///  Windows) as JSON: `{studyMode, bodySize, openPanes, activePane, firstRun}`.
        ///  `firstRun` is true only when no config file existed. Never null.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "pure_config_load_json", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern byte* pure_config_load_json();

        /// <summary>
        ///  Save the shell config from the same JSON shape (unknown fields ignored,
        ///  `firstRun` ignored). Null on success, else an owned error message.
        ///
        ///  # Safety
        ///  `json` is null or valid NUL-terminated UTF-8 for the call.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "pure_config_save_json", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern byte* pure_config_save_json(byte* json);

        /// <summary>
        ///  Clipboard text for a verse (or its chapter, for the `chapter*` kinds) in one
        ///  of the shapes `pure_core::export::CopyKind` names (`verse` / `verseRef` /
        ///  `verseMarkdown` / `chapter` / `chapterMarkdown`). Plain text, not JSON; null
        ///  on a bad ref, an unknown kind, or a verse the corpus lacks. Caller-freed.
        ///
        ///  # Safety
        ///  `engine` is a live engine; the string args are null or valid NUL-terminated
        ///  UTF-8 for the call.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "pure_engine_copy_text", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern byte* pure_engine_copy_text(PureEngine* engine, byte* ref_key, byte* kind);

        /// <summary>
        ///  The reader's personal note on a verse as JSON (`{verse,display,text,created,
        ///  updated}`), or null when the verse has no note (or the engine has no home).
        ///
        ///  # Safety
        ///  `engine` is a live engine; `ref_key` is null or valid NUL-terminated UTF-8.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "pure_engine_user_note_json", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern byte* pure_engine_user_note_json(PureEngine* engine, byte* ref_key);

        /// <summary>
        ///  All the reader's personal notes as JSON (`{notes:[…]}`), in canonical reading
        ///  order — for the gutter marks and a "your notes" browser. Never null on a live
        ///  engine (no notes → empty list).
        ///
        ///  # Safety
        ///  `engine` is a live engine (or null → null).
        /// </summary>
        [DllImport(__DllName, EntryPoint = "pure_engine_user_notes_json", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern byte* pure_engine_user_notes_json(PureEngine* engine);

        /// <summary>
        ///  Set (or clear, with an empty `text`) the reader's personal note on a verse,
        ///  atomically, then reload. `stamp` is a caller-supplied UTC timestamp. Null on
        ///  success, else an owned error string.
        ///
        ///  # Safety
        ///  `engine` is a live engine; the string args are null or valid NUL-terminated
        ///  UTF-8 for the call.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "pure_engine_user_note_set", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern byte* pure_engine_user_note_set(PureEngine* engine, byte* ref_key, byte* text, byte* stamp);

        /// <summary>
        ///  Set (or clear, with a null `color`) the swatch colour of the tag named
        ///  `name`, then reload. Drives highlighting (a colour-bearing tag washes its
        ///  verses). Null on success, else an owned error.
        ///
        ///  # Safety
        ///  `engine` is a live engine; the string args are null or valid NUL-terminated
        ///  UTF-8 for the call.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "pure_engine_tag_set_color", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern byte* pure_engine_tag_set_color(PureEngine* engine, byte* name, byte* color);

        /// <summary>
        ///  Add a word-precise highlight range to the tag named `name` (created on first
        ///  use, taking `color` as its tone). The range runs from `start_ref`+`start_tok`
        ///  to `end_ref`+`end_tok` (inclusive token indices under `kjv1769-tok2`);
        ///  endpoints are ordered canonically here, so a backwards drag is fine. `color`
        ///  may be null (the range then inherits the tag's colour). `added` is a
        ///  caller-supplied UTC timestamp. Null on success, else an owned error.
        ///
        ///  # Safety
        ///  `engine` is valid; the string args are null or valid NUL-terminated UTF-8.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "pure_engine_highlight_add", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern byte* pure_engine_highlight_add(PureEngine* engine, byte* name, byte* color, byte* start_ref, uint start_tok, byte* end_ref, uint end_tok, byte* added);

        /// <summary>
        ///  Remove the highlight range with these endpoints from the tag named `name`.
        ///  Endpoints are ordered canonically to match how they were stored. A missing
        ///  range is a no-op; a missing tag is an error. Null on success, else an error.
        ///
        ///  # Safety
        ///  `engine` is valid; the string args are null or valid NUL-terminated UTF-8.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "pure_engine_highlight_remove", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern byte* pure_engine_highlight_remove(PureEngine* engine, byte* name, byte* start_ref, uint start_tok, byte* end_ref, uint end_tok);

        /// <summary>
        ///  The highlight washes for a chapter as JSON (`{book,chapter,verses:[{verse,
        ///  color}]}`): each verse that belongs to a colour-bearing tag, with the tone
        ///  the shell washes behind it. Never null on a live engine (none → empty list).
        ///
        ///  # Safety
        ///  `engine` is a live engine; `book` is null or valid NUL-terminated UTF-8.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "pure_engine_chapter_highlights_json", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern byte* pure_engine_chapter_highlights_json(PureEngine* engine, byte* book, uint chapter);
